letter spacing fix

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -224,12 +224,18 @@ body {
 .svg-text {
   margin-top: 60vh; }
 
+.carousel-cell:first-child .svg-text {
+  margin-top: 50vh; }
+
 .svg-text svg text {
   text-anchor: middle;
   font-weight: 700;
   text-transform: uppercase;
   font-family: 'Proxima Nova', 'Helvetica', sans-serif;
   letter-spacing: 5px; }
+
+.Marius .svg-text svg text {
+  letter-spacing: 0px; }
 
 tspan {
   white-space: inherit; }
@@ -249,17 +255,18 @@ tspan {
 .bandcontent h3 {
   width: 100%;
   text-align: center;
-  font-size: 2em;
+  font-size: 1.8em;
   margin: 0; }
-
-@media screen and (max-width: 414px) {
-  .bandcontent .contentdesc, .bandcontent .contentlineup {
-    font-size: 1.5em; } }
 
 .bandcontent a {
   color: white;
   font-weight: 700;
-  z-index: 999; }
+  z-index: 999;
+  text-decoration: none; }
+
+@media screen and (max-width: 414px) {
+  .bandcontent .contentdesc, .bandcontent .contentlineup {
+    font-size: 1.5em; } }
 
 .textbox {
   padding-top: 1em; }
